Total reorganization of the program dependencies and projects

--- a/BandManager/ProgressBandTests/ProgressBandTest.csproj
+++ b/BandManager/ProgressBandTests/ProgressBandTest.csproj
@@ -105,18 +105,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChordTest.cs" />
-    <Compile Include="ChordTransposerTest.cs" />
-    <Compile Include="GoogleDistanceMatrixResponseParserTest.cs" />
-    <Compile Include="PBandDistanceCalculatorTest.cs" />
-    <Compile Include="PBCalendarTest.cs" />
-    <Compile Include="ProgressBandTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SongTest.cs" />
-    <Compile Include="DistanceCalculatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Band.Model\Band.Model.csproj">
+    <ProjectReference Include="..\Band.Model\Band.Db.Entities.csproj">
       <Project>{04884B06-8088-44B1-AA5C-907B542EB568}</Project>
       <Name>Band.Model</Name>
     </ProjectReference>
@@ -124,15 +116,6 @@
       <Project>{AF55F648-AB2F-4131-879A-048E6FFF9271}</Project>
       <Name>Band</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="GoogleDistanceMatrixResponse.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="GoogleDistanceMatrixResponse2.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="GoogleDistanceMatrixResponse3.xml" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
