Adding WPF project

--- a/BandManager/WindowsForms/Band/Band.csproj
+++ b/BandManager/WindowsForms/Band/Band.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WindowsForms.Band</RootNamespace>
-    <AssemblyName>WindowsForms.Band</AssemblyName>
+    <AssemblyName>Band.WindowsForms</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>true</IsWebBootstrapper>
