--- a/BandManager/Band.Business/Band.Business.csproj
+++ b/BandManager/Band.Business/Band.Business.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Songs\SongReader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Band.Db.Entities\Band.Db.Entities.csproj">
+    <ProjectReference Include="..\Band.Domain\Band.Domain.csproj">
       <Project>{04884b06-8088-44b1-aa5c-907b542eb568}</Project>
-      <Name>Band.Db.Entities</Name>
+      <Name>Band.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
