--- a/BandManager/WindowsForms/Band/Band.csproj
+++ b/BandManager/WindowsForms/Band/Band.csproj
@@ -302,9 +302,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Band.Db.Entities\Band.Db.Entities.csproj">
+    <ProjectReference Include="..\..\Band.Domain\Band.Domain.csproj">
       <Project>{04884B06-8088-44B1-AA5C-907B542EB568}</Project>
-      <Name>Band.Db.Entities</Name>
+      <Name>Band.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Band.Controls\Band.Controls.csproj">
       <Project>{695C85C0-1D2B-4EDA-A1F5-16F8A3502022}</Project>
