--- a/BandManager/WindowsForms/Band/packages.config
+++ b/BandManager/WindowsForms/Band/packages.config
@@ -5,5 +5,7 @@
   <package id="Google.GData.Calendar" version="2.2.0.0" targetFramework="net461" />
   <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net461" />
   <package id="Google.GData.Extensions" version="2.2.0.0" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="4.0.5" targetFramework="net461" />
+  <package id="NHibernate" version="4.0.0.4000" targetFramework="net461" />
 </packages>
