--- a/BandManager/Band.Business/Band.Business.csproj
+++ b/BandManager/Band.Business/Band.Business.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Exceptions\WrongChordFormatException.cs" />
     <Compile Include="Exceptions\WrongScaleConversionException.cs" />
+    <Compile Include="IAppDependencies.cs" />
     <Compile Include="PdfAgreementDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Songs\Chord.cs" />
