--- a/BandManager/Band.Domain/Band.Domain.csproj
+++ b/BandManager/Band.Domain/Band.Domain.csproj
@@ -40,6 +40,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SongType.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
