--- a/BandManager/Band.Db.Nhibernate.Tests/Band.Db.Nhibernate.Tests.csproj
+++ b/BandManager/Band.Db.Nhibernate.Tests/Band.Db.Nhibernate.Tests.csproj
@@ -31,6 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHibernate.4.0.0.4000\lib\net40\NHibernate.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -52,6 +60,10 @@
     <ProjectReference Include="..\Band.Db.Nhibernate\Band.Db.Nhibernate.csproj">
       <Project>{99D633C3-DADD-4CB3-BB86-A46C77EB3A2C}</Project>
       <Name>Band.Db.Nhibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Band.Domain\Band.Domain.csproj">
+      <Project>{04884B06-8088-44B1-AA5C-907B542EB568}</Project>
+      <Name>Band.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
