Adding entity framework configuration + SaveCommand

--- a/BandManager/WPF/Band.csproj
+++ b/BandManager/WPF/Band.csproj
@@ -36,15 +36,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHibernate.4.0.0.4000\lib\net40\NHibernate.dll</HintPath>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.Entity.6.9.9\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +73,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BandDbContext.cs" />
+    <Compile Include="Commands\MoveToSongBlocksCommand.cs" />
+    <Compile Include="Commands\SaveSongsCommand.cs" />
     <Compile Include="ViewModels\SongViewModel.cs" />
     <Page Include="MainSongWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -107,9 +119,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Band.Db.Nhibernate\Band.Db.Nhibernate.csproj">
-      <Project>{99D633C3-DADD-4CB3-BB86-A46C77EB3A2C}</Project>
-      <Name>Band.Db.Nhibernate</Name>
+    <ProjectReference Include="..\Band.Db.EntityFramework\Band.Db.EntityFramework.csproj">
+      <Project>{9d8ff801-bde4-4982-bd56-9f4dd7f45de4}</Project>
+      <Name>Band.Db.EntityFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Band.Domain\Band.Domain.csproj">
       <Project>{04884B06-8088-44B1-AA5C-907B542EB568}</Project>
